--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interview</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <br>
-    <h1>Interview</h1>
-    <br>
-    <h5>Questions
-        <ul>
-            <li>Favorite Color</li>
-            <li>Favorite Place</li>
-            <li>Favorite Food</li>
-            <li>Favorite Sport</li>
-            <li>Favorite Hobby</li>
-            <li>Favorite Car</li>
-            <li>Favorite Music</li>
-            <li>Favorite Video Game</li>
-            <li>Favorite Shoe Brand</li>
-            <li>Favorite City</li>
-        </ul>
-    </h5>
+    <div class="top">
+        <h1 class="ont">Interview</h1>
+        <br>
+        <h5 class="ont2"> Questions
+            <ul>
+                <li>Favorite Color</li>
+                <li>Favorite Place</li>
+                <li>Favorite Food</li>
+                <li>Favorite Sport</li>
+                <li>Favorite Hobby</li>
+                <li>Favorite Car</li>
+                <li>Favorite Music</li>
+                <li>Favorite Video Game</li>
+                <li>Favorite Shoe Brand</li>
+                <li>Favorite City</li>
+            </ul>
+        </h5>
+    </div>
     <div>
-        <h3>Manny Cerna</h3>
+        <h3 class="ont3"> Manny Cerna</h3>
         <br>
         <a href="https://github.com/mannycerna">GitHub Link</a>
         <br>
@@ -47,7 +51,7 @@
     </div>
     <br>
     <div>
-        <h3>Aaron Lacey</h3>
+        <h3 class="ont4"> Aaron Lacey</h3>
         <br>
         <a href="http://github.com/aaronlacey">GitHub Link</a>
         <br>
@@ -68,7 +72,7 @@
     </div>
     <br>
     <div>
-        <h3>Jake Roughton</h3>
+        <h3 class="ont5"> Jake Roughton</h3>
         <br>
         <a href="https://github.com/JakeRoughton">GitHub Link</a>
         <br>
@@ -89,4 +93,5 @@
         </ul>
     </div>
 </body>
+
 </html>
